# webdev

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
