[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "webdev"
version = "0.1.0"
description = ""
authors = [ "Aditya Gudimella <aditya.gudimella@gmail.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dependencies.docbook]
git = "git@github.com:AdityaGudimella/docbook.git"
